tests/invalid/e010_undefined_var.pak
-- EXPECT: E010
-- Using a variable that was never declared is an error.

entry {
    let x: i32 = undefined_var + 1
}
